Fix problem with text wrap
add text wrap to entries

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   text-align: center;
   width: 100%;
+  word-wrap: break-word;
 }
 
 .text-light {
